Fix overflow in media content

--- a/scm-ui/styles/scm.scss
+++ b/scm-ui/styles/scm.scss
@@ -11,6 +11,10 @@ $blue: #33B2E8;
   white-space: nowrap;
 }
 
+.media-content {
+  overflow: auto;
+}
+
 .has-rounded-border {
   border-radius: 0.25rem;
 }
